--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">For-science</h1>
-      <h2 class="project-tagline">Miscellaneous Publications</h2>
+      <h2 class="project-tagline">Miscellaneous Presentations etc</h2>
     </section>
 
     <section class="main-content">
-      <h3>Miscellaneous</h3>
+      <h3>Barry Rowlingson's Miscellaneous</h3>
 <ul>
 <li><a href="BLS_awayday/chicas.pdf">From the BLS Away Day January 2016</a>
 </ul>
