uploaded lastest profiles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section class="main-content">
       <h3>Barry Rowlingson's Miscellaneous</h3>
 <ul>
+<li><a href="people.pdf">CHICAS Profiles</a>
 <li><a href="BLS_awayday/chicas.pdf">From the BLS Away Day January 2016</a>
 </ul>
 
